# QR-Code-generator

c/: CMakeLists.txt  qr_code_generatorConfig.cmake.in
